--- a/src/main/resources/assets/nucleon/lang/en_us.json
+++ b/src/main/resources/assets/nucleon/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "item.nucleon.raw_uranium": "Raw Uranium",
+  "item.nucleon.adamantite": "Adamantite",
 
   "creativetab.nucleon.nucleon_items": "Nucleon Items"
 }
